Adding tomcat start function